// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NotificationItem - Snapshots > matches snapshot for Follow notification 1`] = `
<div
  class="flex w-full items-center justify-between gap-2"
  data-testid="container"
>
  <a
    class="flex w-full items-center justify-between gap-2 transition-opacity hover:opacity-80"
    href="/profile/user1"
  >
    <div
      class="flex items-center gap-2"
      data-testid="container"
    >
      <div
        class="lg:size-8"
        data-name="User"
        data-testid="avatar-with-fallback"
      >
        <span>
          U
        </span>
      </div>
      <div
        class="flex items-center gap-2"
        data-testid="container"
      >
        <p
          class="text-sm leading-none font-medium text-foreground lg:text-base lg:leading-normal"
          data-testid="typography"
        >
          User followed you
        </p>
      </div>
    </div>
    <div
      class="flex items-center gap-2"
      data-testid="container"
    >
      <p
        class="text-xs font-medium tracking-[1.2px] text-muted-foreground uppercase xl:hidden"
        data-testid="typography"
      >
        30m
      </p>
      <p
        class="hidden text-xs font-medium tracking-[1.2px] text-muted-foreground uppercase xl:block"
        data-testid="typography"
      >
        30m
      </p>
      <div
        data-badge="false"
        data-testid="notification-icon"
        data-type="follow"
      >
        Icon
      </div>
    </div>
  </a>
</div>
`;

exports[`NotificationItem - Snapshots > matches snapshot for Mention notification 1`] = `
<div
  class="flex w-full items-center justify-between gap-2"
  data-testid="container"
>
  <a
    class="flex w-full items-center justify-between gap-2 transition-opacity hover:opacity-80"
    href="/post/user1:post123"
  >
    <div
      class="flex items-center gap-2"
      data-testid="container"
    >
      <div
        class="lg:size-8"
        data-name="User"
        data-testid="avatar-with-fallback"
      >
        <span>
          U
        </span>
      </div>
      <div
        class="flex items-center gap-2"
        data-testid="container"
      >
        <p
          class="text-sm leading-none font-medium text-foreground lg:text-base lg:leading-normal"
          data-testid="typography"
        >
          User mentioned you in post
        </p>
        <p
          class="hidden text-base font-medium text-muted-foreground xl:inline"
          data-testid="typography"
        >
          'The reason why...'
        </p>
      </div>
    </div>
    <div
      class="flex items-center gap-2"
      data-testid="container"
    >
      <p
        class="text-xs font-medium tracking-[1.2px] text-muted-foreground uppercase xl:hidden"
        data-testid="typography"
      >
        30m
      </p>
      <p
        class="hidden text-xs font-medium tracking-[1.2px] text-muted-foreground uppercase xl:block"
        data-testid="typography"
      >
        30m
      </p>
      <div
        data-badge="false"
        data-testid="notification-icon"
        data-type="mention"
      >
        Icon
      </div>
    </div>
  </a>
</div>
`;

exports[`NotificationItem - Snapshots > matches snapshot for TagPost notification 1`] = `
<div
  class="flex w-full items-center justify-between gap-2"
  data-testid="container"
>
  <a
    class="flex w-full items-center justify-between gap-2 transition-opacity hover:opacity-80"
    href="/post/user1:post123"
  >
    <div
      class="flex items-center gap-2"
      data-testid="container"
    >
      <div
        class="lg:size-8"
        data-name="User"
        data-testid="avatar-with-fallback"
      >
        <span>
          U
        </span>
      </div>
      <div
        class="flex items-center gap-2"
        data-testid="container"
      >
        <p
          class="text-sm leading-none font-medium text-foreground lg:text-base lg:leading-normal"
          data-testid="typography"
        >
          User tagged your post
        </p>
        <p
          class="hidden text-base font-medium text-muted-foreground xl:inline"
          data-testid="typography"
        >
          'I have said it...'
        </p>
        <span
          data-testid="post-tag"
        >
          bitcoin
        </span>
      </div>
    </div>
    <div
      class="flex items-center gap-2"
      data-testid="container"
    >
      <p
        class="text-xs font-medium tracking-[1.2px] text-muted-foreground uppercase xl:hidden"
        data-testid="typography"
      >
        30m
      </p>
      <p
        class="hidden text-xs font-medium tracking-[1.2px] text-muted-foreground uppercase xl:block"
        data-testid="typography"
      >
        30m
      </p>
      <div
        data-badge="false"
        data-testid="notification-icon"
        data-type="tag_post"
      >
        Icon
      </div>
    </div>
  </a>
</div>
`;
